--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -770,7 +770,7 @@
                 szkole. </span>
               <br><br>
               翻译: <br><br>
-              <!---Nie nad używaj break pointów między paragrafami i elementami - Robert-->
+              <!---Nie nad używaj break pointów między paragrafami i elementami - by Robert-->
               <b>Damian:</b>
               你好！我是Damian，我28岁。我出生于波兰，我是波兰人。我在学校工作，做老师。<br><br>
               <b>Anna:</b>
@@ -917,7 +917,7 @@
             <h2>To be verb</h2>
             <p>开始学习新语言的时候，《是》一般为第一个学会的动词。那，我们看看波兰语“是”的情况怎么样吧。<br><br>
               首先，请看一下动词不定式——“być”。<br>
-            影响波兰语动词词形的因素很多，不过为了让这门课清楚一些，今天我们只会看现在时“是”的标准变法。 <br><br>
+              影响波兰语动词词形的因素很多，不过为了让这门课清楚一些，今天我们只会看现在时“是”的标准变法。 <br><br>
             </p>
             <table>
               <tr>
@@ -954,32 +954,31 @@
               <span lang="pl"> <span class="accent">Ja jestem</span> studentem – 我是大学生（《我》是男的）<br>
                 <span class="accent">Ja jestem</span> studentką – 我是大学生（《我》是女的）<br>
                 <span class="accent">Ty jesteś</span> studentem – 你是大学生（《你》是男的）<br>
-                <span class="accent">Ty jesteś</span> studentką –  你是大学生（《你》是女的）<br>
+                <span class="accent">Ty jesteś</span> studentką – 你是大学生（《你》是女的）<br>
                 <span class="accent">On jest</span> studentem – 他是大学生。<br>
                 <span class="accent">Ona jest</span> studentką – 她是大学生。<br>
                 <span class="accent">Ono jest</span> dzieckiem. – 它是个孩子。<br>
                 <span class="accent">My jesteśmy</span> studentami – 我们是大学生 （《我们》都是男的或者男女人群）<br>
                 <span class="accent">My jesteśmy</span> studentkami – 我们是大学生（《我们》都是女的）<br>
-                <span class="accent">Wy jesteście</span> studentami –  你们是大学生（《你们》都是男的或者男女人群）<br>
+                <span class="accent">Wy jesteście</span> studentami – 你们是大学生（《你们》都是男的或者男女人群）<br>
                 <span class="accent">Wy jesteście</span> studentkami – 你们是大学生（《你们》都是女的）<br>
                 <span class="accent">Oni są</span> studentami – 他们是大学生（《他们》都是男的或者男女人群）<br>
                 <span class="accent">One są</span> studentkami – 她们是大学生（《她们》都是女的）<br>
                 <span class="accent">To jest</span> uniwersytet – 这是大学 <br></span>
             </p>
-            <p>你可能发现了，上写局子里的意思根据名词或代词不同而变，意思变化不依靠动词。尽管如此，现在不要太担心名词变法——上这门课的时候只注意<span
-              lang="pl">być</span>的变化规则就行。😊
+            <p>你可能发现了，上写局子里的意思根据名词或代词不同而变，意思变化不依靠动词。尽管如此，现在不要太担心名词变法——上这门课的时候只注意<span lang="pl">być</span>的变化规则就行。😊
               <br><br>
               你想不想要练习一下，自己造句吗？
             </p>
             <form id="quiz" name="quiz">
               <p>你看见一群男人，他们都明显是大学生。你会怎么开始介绍他们？</p>
-              <input type="radio" name="question1" value="1">Ja jestem...
+              <input type="radio" name="question1" value="1"><span lang="pl">Ja jestem... </span>
               <input type="radio" name="question1" value="2"><span lang="pl">Oni są...</span>
-              <input type="radio" name="question1" value="3">On jest...
+              <input type="radio" name="question1" value="3"><span lang="pl">On jest... </span>
 
               <p>如果你妈妈当老师，你会怎么介绍她？ </p>
-              <input type="radio" name="question2" value="1">Ona jest...
-              <input type="radio" name="question2" value="2">Ono jest...
+              <input type="radio" name="question2" value="1"><span lang="pl">Ona jest... </span>
+              <input type="radio" name="question2" value="2"><span lang="pl">Ono jest... </span>
               <input type="radio" name="question2" value="3"><span lang="pl">Oni są...</span>
 
               <p>你是韩国人，你会怎么开始自我介绍？ </p>
@@ -1001,15 +1000,15 @@
               <p> 你还可以试试翻译下列句子：<br></p>
 
               <p>你是个大学生。</p>
-              <input class="textbox" type="text" name="question6"> studentem.
+              <input class="textbox" type="text" name="question6"> <span lang="pl">studentem. </span>
               <p>他是老师。 </p>
-              <input class="textbox" type="text" name="question7"> nauczycielem.
+              <input class="textbox" type="text" name="question7"> <span lang="pl">nauczycielem. </span>
               <p>他们是我的朋友。</p>
-              <input class="textbox" type="text" name="question8"> moimi przyjaciółmi.
+              <input class="textbox" type="text" name="question8"> <span lang="pl">moimi przyjaciółmi. </span>
               <p>她们是我的朋友。</p>
-              <input class="textbox" type="text" name="question9"> moimi przyjaciółkami.
+              <input class="textbox" type="text" name="question9"><span lang="pl"> moimi przyjaciółkami. </span>
               <p>我是你的邻居。</p>
-              <input class="textbox" type="text" name="question10"> twoim sąsiadem.
+              <input class="textbox" type="text" name="question10"><span lang="pl"> twoim sąsiadem. </span>
               <input id="submitButton" type="button" value="Check my answers" onclick="check()">
             </form>
             <div id="afterSubmit"></div>
