--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -1267,7 +1267,13 @@
               <ruby>wieloletnia wojna<rp>(</rp>
                 <rt>ウィエロレツニャ　ヲイナ</rt>
                 <rp>)</rp>
-              </ruby>, <ruby>druga wojna<rp>(</rp><rt>ドルガ　ヲイナ</rt><rp>)</rp></ruby> →  <ruby>wojna domowa<rp>(</rp><rt>ヲイナ　ドモワ</rt><rp>)</rp></ruby>
+              </ruby>, <ruby>druga wojna<rp>(</rp>
+                <rt>ドルガ　ヲイナ</rt>
+                <rp>)</rp>
+              </ruby> → <ruby>wojna domowa<rp>(</rp>
+                <rt>ヲイナ　ドモワ</rt>
+                <rp>)</rp>
+              </ruby>
             </p>
             <div class="sign">
               <p class="sign--person">作成者:</p>
@@ -1516,7 +1522,7 @@
               <tr>
                 <td><ruby>herbata<rp>(</rp>
                     <rt>ヘルバタ</rt>
-                      <rp>)</rp>
+                    <rp>)</rp>
                   </ruby> - お茶</td>
                 <td><ruby>ta herbata<rp>(</rp>
                     <rt>タ　ヘルバタ</rt>
@@ -1694,8 +1700,9 @@
                     <rp>)</rp>
                   </ruby></td>
                 <td>彼/彼女/それは(また、 <ruby>to jest<rp>(</rp>
-                  <rt>ト　イエストゥ</rt>
-                  <rp>)</rp></ruby> – これは)
+                    <rt>ト　イエストゥ</rt>
+                    <rp>)</rp>
+                  </ruby> – これは)
                 </td>
               </tr>
               <tr>
@@ -1745,91 +1752,91 @@
                     <rt>テイ イェステシ</rt>
                     <rp>)</rp>
                   </ruby></span> <ruby>studentem
-                    <rp>(</rp>
-                    <rt>ストゥデンテム</rt>
+                  <rp>(</rp>
+                  <rt>ストゥデンテム</rt>
+                  <rp>)</rp>
+                </ruby> – あなたは大学生です。(聞き手が男性の場合)<br>
+                <span class="accent"><ruby>Ty jesteś<rp>(</rp>
+                    <rt>テイ イェステシ</rt>
                     <rp>)</rp>
-                  </ruby> – あなたは大学生です。(聞き手が男性の場合)<br>
-                  <span class="accent"><ruby>Ty jesteś<rp>(</rp>
-                      <rt>テイ イェステシ</rt>
-                      <rp>)</rp>
-                    </ruby></span> <ruby>studentką<rp>(</rp>
-                    <rt>ストゥデントゥコン</rt>
+                  </ruby></span> <ruby>studentką<rp>(</rp>
+                  <rt>ストゥデントゥコン</rt>
+                  <rp>)</rp>
+                </ruby> – あなたは大学生です。(聞き手が女性の場合)<br>
+                <span class="accent"><ruby>On jest<rp>(</rp>
+                    <rt>オン イェストゥ</rt>
                     <rp>)</rp>
-                  </ruby> – あなたは大学生です。(聞き手が女性の場合)<br>
-                  <span class="accent"><ruby>On jest<rp>(</rp>
-                      <rt>オン イェストゥ</rt>
-                      <rp>)</rp>
-                    </ruby></span>
-                  <ruby>studentem<rp>(</rp>
-                      <rt>ストゥデンテム</rt>
-                      <rp>)</rp>
-                    </ruby> – 彼は大学生です。<br>
-                    <span class="accent"><ruby>Ona jest<rp>(
-                        </rp>
-                        <rt>オナ　イェストゥ</rt>
-                        <rp>)</rp>
-                      </ruby></span> <ruby>studentką<rp>(</rp>
-                      <rt>ストゥデントゥコン</rt>
-                      <rp>)</rp>
-                    </ruby> – 彼女は大学生です。<br>
-                    <span class="accent"><ruby>Ono jest<rp>(
-                        </rp>
-                        <rt>オノ　イェストゥ</rt>
-                        <rp>)</rp>
-                      </ruby></span> <ruby>dzieckiem<rp>(</rp>
-                      <rt>ジェツキエム</rt>
-                      <rp>)</rp>
-                    </ruby>. – それは子どもです。<br>
-                    <span class="accent"><ruby>My jesteśmy<rp>(
-                        </rp>
-                        <rt>メイ イェステシュメ</rt>
-                        <rp>)</rp>
-                      </ruby></span> <ruby>studentami<rp>(</rp>
-                      <rt>ストゥデンタミ</rt>
-                      <rp>)</rp>
-                    </ruby> –
-                    私たちは学生です。(話し手とその団体のどちらも男性、または男女混合の場合) <br>
-                    <span class="accent"><ruby>My
-                        jesteśmy</span> <ruby>studentkami<rp>(
-                      </rp>
-                      <rt>ストゥデントゥカミ</rt>
-                      <rp>)</rp>
-                    </ruby> – 私たちは大学生です。(話し手とその団体の全員が女性の場合)<br>
-                    <span class="accent"><ruby>Wy jesteście<rp>(
-                        </rp>
-                        <rt>ウィ　イェステシチエ</rt>
-                        <rp>)</rp>
-                      </ruby></span> <ruby>studentami<rp>(</rp>
-                      <rt>ストゥデンタミ</rt>
-                      <rp>)</rp>
-                    </ruby> – あなたは大学生です。(聞き手が全員男性、または男女の場合)<br>
-                    <span class="accent">Wy
-                        jesteście</span> <ruby>studentkami<rp>(
-                      </rp>
-                      <rt>ストゥデントゥカミ</rt>
-                      <rp>)</rp>
-                    </ruby> – あなたは大学生です。(聞き手が全員女性の場合)<br>
-                    <span class="accent"><ruby>Oni są<rp>(</rp>
-                        <rt>オニ　ソン</rt>
-                        <rp>)</rp>
-                      </ruby></span> <ruby>studentami<rp>(</rp>
-                      <rt>ストゥデンタミ</rt>
-                      <rp>)</rp>
-                    </ruby> – 彼らは大学生です。(彼ら＝全員男性、または男女の場合)<br>
-                    <span class="accent"><ruby>One są<rp>(</rp>
-                        <rt>オネ　ソン</rt>
-                        <rp>)</rp>
-                      </ruby></span> <ruby>studentkami<rp>(</rp>
-                      <rt>ストゥデントゥカミ</rt>
-                      <rp>)</rp>
-                    </ruby> – 彼女らは大学生です。(彼女ら＝全員女性の場合)<br>
-                    <span class="accent"><ruby>To jest<rp>(</rp>
-                        <rt>ト　イェストゥ</rt>
-                        <rp>)</rp>
-                      </ruby></span> <ruby>uniwersytet<rp>(</rp>
-                      <rt>ウニヴェルシテトゥ</rt>
-                      <rp>)</rp>
-                    </ruby> – これは大学です。<br></span>
+                  </ruby></span>
+                <ruby>studentem<rp>(</rp>
+                  <rt>ストゥデンテム</rt>
+                  <rp>)</rp>
+                </ruby> – 彼は大学生です。<br>
+                <span class="accent"><ruby>Ona jest<rp>(
+                    </rp>
+                    <rt>オナ　イェストゥ</rt>
+                    <rp>)</rp>
+                  </ruby></span> <ruby>studentką<rp>(</rp>
+                  <rt>ストゥデントゥコン</rt>
+                  <rp>)</rp>
+                </ruby> – 彼女は大学生です。<br>
+                <span class="accent"><ruby>Ono jest<rp>(
+                    </rp>
+                    <rt>オノ　イェストゥ</rt>
+                    <rp>)</rp>
+                  </ruby></span> <ruby>dzieckiem<rp>(</rp>
+                  <rt>ジェツキエム</rt>
+                  <rp>)</rp>
+                </ruby>. – それは子どもです。<br>
+                <span class="accent"><ruby>My jesteśmy<rp>(
+                    </rp>
+                    <rt>メイ イェステシュメ</rt>
+                    <rp>)</rp>
+                  </ruby></span> <ruby>studentami<rp>(</rp>
+                  <rt>ストゥデンタミ</rt>
+                  <rp>)</rp>
+                </ruby> –
+                私たちは学生です。(話し手とその団体のどちらも男性、または男女混合の場合) <br>
+                <span class="accent"><ruby>My
+                    jesteśmy</span> <ruby>studentkami<rp>(
+                  </rp>
+                  <rt>ストゥデントゥカミ</rt>
+                  <rp>)</rp>
+                </ruby> – 私たちは大学生です。(話し手とその団体の全員が女性の場合)<br>
+                <span class="accent"><ruby>Wy jesteście<rp>(
+                    </rp>
+                    <rt>ウィ　イェステシチエ</rt>
+                    <rp>)</rp>
+                  </ruby></span> <ruby>studentami<rp>(</rp>
+                  <rt>ストゥデンタミ</rt>
+                  <rp>)</rp>
+                </ruby> – あなたは大学生です。(聞き手が全員男性、または男女の場合)<br>
+                <span class="accent">Wy
+                  jesteście</span> <ruby>studentkami<rp>(
+                  </rp>
+                  <rt>ストゥデントゥカミ</rt>
+                  <rp>)</rp>
+                </ruby> – あなたは大学生です。(聞き手が全員女性の場合)<br>
+                <span class="accent"><ruby>Oni są<rp>(</rp>
+                    <rt>オニ　ソン</rt>
+                    <rp>)</rp>
+                  </ruby></span> <ruby>studentami<rp>(</rp>
+                  <rt>ストゥデンタミ</rt>
+                  <rp>)</rp>
+                </ruby> – 彼らは大学生です。(彼ら＝全員男性、または男女の場合)<br>
+                <span class="accent"><ruby>One są<rp>(</rp>
+                    <rt>オネ　ソン</rt>
+                    <rp>)</rp>
+                  </ruby></span> <ruby>studentkami<rp>(</rp>
+                  <rt>ストゥデントゥカミ</rt>
+                  <rp>)</rp>
+                </ruby> – 彼女らは大学生です。(彼女ら＝全員女性の場合)<br>
+                <span class="accent"><ruby>To jest<rp>(</rp>
+                    <rt>ト　イェストゥ</rt>
+                    <rp>)</rp>
+                  </ruby></span> <ruby>uniwersytet<rp>(</rp>
+                  <rt>ウニヴェルシテトゥ</rt>
+                  <rp>)</rp>
+                </ruby> – これは大学です。<br></span>
             </p>
             <p>以上の例文から、動詞ではなく、名詞または代名詞によって意味がわずかに変わることがわかります。
               名詞の語形変化についてはこのレッスンでは触れませんので、「<span lang="pl">być</span>」を正しく理解することに集中していきましょう◎ .
@@ -1839,33 +1846,44 @@
             <form id="quiz" name="quiz">
               <p>ここに男子大学生のグループがいます。以下のa～cいずれか正しいものを選択し、説明してください。
               </p>
-              <input type="radio" name="question1" value="1">Ja jestem...
-              <input type="radio" name="question1" value="2"><span lang="pl">Oni są...</span>
-              <input type="radio" name="question1" value="3">On jest...
+              <input type="radio" name="question1" value="1" id="12345678945144131"><label lang="pl"
+                for="12345678945144131">Ja jestem...</label>
+              <input type="radio" name="question1" value="2" id="1234567894514413"><label lang="pl"
+                for="1234567894514413">Oni są...</label>
+              <input type="radio" name="question1" value="3" id="123456789451441"><label lang="pl"
+                for="123456789451441">On jest...</label>
 
               <p>あなたの母は教師でした。以下a～cのどれを使って文章を始めますか？ </p>
-              <input type="radio" name="question2" value="1">Ona jest...
-              <input type="radio" name="question2" value="2">Ono jest...
-              <input type="radio" name="question2" value="3"><span lang="pl">Oni są...</span>
+              <input type="radio" name="question2" value="1" id="123456789451"><label lang="pl" for="123456789451">Ona
+                jest...</label>
+              <input type="radio" name="question2" value="2" id="1234567894514"><label lang="pl" for="1234567894514">Ono
+                jest...</label>
+              <input type="radio" name="question2" value="3" id="1234567894"><label lang="pl" for="1234567894">Oni
+                są...</label>
 
               <p>あなたは韓国人です。以下a～cのどれを使って文章を始めますか？</p>
-              <input type="radio" name="question3" value="1"><span lang="pl">Ty jesteś...</span>
-              <input type="radio" name="question3" value="2"><span lang="pl">One są...</span>
-              <input type="radio" name="question3" value="3">Ja jestem...
+              <input type="radio" name="question3" value="1" id="12345678945"><label lang="pl" for="12345678945">Ty
+                jesteś...</label>
+              <input type="radio" name="question3" value="2" id="12345678"><label lang="pl" for="12345678">One
+                są...</label>
+              <input type="radio" name="question3" value="3" id="123456789"><label lang="pl" for="123456789">Ja
+                jestem...</label>
 
               <p>
                 あなたが一緒にパーティーに来た女友達は全員大学生です。以下のa～cいずれか正しいものを選択し、彼らについて説明してください。
               </p>
-              <input type="radio" name="question4" value="1"><span lang="pl">Wy jesteście...</span>
-              <input type="radio" name="question4" value="2"><span lang="pl">Ty jesteś...</span>
-              <input type="radio" name="question4" value="3"><span lang="pl">One są...</span>
+              <input type="radio" name="question4" value="1" id="123456"><label lang="pl" for="123456">Wy
+                jesteście...</label>
+              <input type="radio" name="question4" value="2" id="12345"><label lang="pl" for="12345">Ty
+                jesteś...</label>
+              <input type="radio" name="question4" value="3" id="1234"><label lang="pl" for="1234">One są...</label>
 
               <p>
                 あなたは今ポーランド人の友達たちと一緒にいます。以下のa～cいずれか正しいものを選択し、彼らについて説明してください。
               </p>
-              <input type="radio" name="question5" value="1"><span lang="pl">Wy jesteście...</span>
-              <input type="radio" name="question5" value="2"><span lang="pl">One są...</span>
-              <input type="radio" name="question5" value="3"><span lang="pl">Ty jesteś...</span>
+              <input type="radio" name="question5" value="1" id="123"><label lang="pl" for="123">Wy jesteście...</label>
+              <input type="radio" name="question5" value="2" id="12"><label lang="pl" for="12">One są...</label>
+              <input type="radio" name="question5" value="3" id="1"><label lang="pl" for="1">Ty jesteś...</label>
 
 
               <p> 以下の文章を訳してみましょう。：<br></p>
