--- a/jp/stuff/beauty.html
+++ b/jp/stuff/beauty.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="description"
@@ -22,6 +23,7 @@
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>Welcome to SARO - 美容</title>
 </head>
+
 <body>
     <header>
         <a href="index.html" class="header-brand">SARO</a>
@@ -57,7 +59,7 @@
         <button class="back" onclick="goBack()">戻る</button>
         <section class="beauty">
             <div class="wrapper">
-                <h1>Beauty</h1>
+                <h1>美容</h1>
                 <article>
                     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
                     <div class="content">
@@ -74,24 +76,25 @@
                                 <span class="dots">(.....)</span></p>
                         </div>
                         <div class="more">
-                                <img src="./../../assets/img/articles/beauty/12.08.2020/2.png"
-                                    alt="Miya and Tołpa Polish cosmetics" class="myImg image-right__center">
-                                <b>MIYA(ミヤ)</b>
-                                <p>全ての肌タイプに使える、自然派コスメブランドです。美容液やエンザイムピーリング(酵素の力でピーリングをする)がとても人気です。
+                            <img src="./../../assets/img/articles/beauty/12.08.2020/2.png"
+                                alt="Miya and Tołpa Polish cosmetics" class="myImg image-right__center">
+                            <b>MIYA(ミヤ)</b>
+                            <p>全ての肌タイプに使える、自然派コスメブランドです。美容液やエンザイムピーリング(酵素の力でピーリングをする)がとても人気です。
                                 このブランドはポーランド市場に出てまだ間もないですが、商品にはパールが多く入っているのでそこが注目ポイントです◎</p>
-                                <b>TOŁPA(トウパ)</b>
-                               <p>敏感肌・アレルギー肌の方におススメのブランドで、ほとんどの商品が肌に優しい成分で作られています。フェイシャルジェルは、お肌の油分を保ちながら、
+                            <b>TOŁPA(トウパ)</b>
+                            <p>敏感肌・アレルギー肌の方におススメのブランドで、ほとんどの商品が肌に優しい成分で作られています。フェイシャルジェルは、お肌の油分を保ちながら、
                                 肌を優しくコーティングをしてくれます。クリームもおススメで、お肌の深くまで栄養を与えくれ、乾燥肌の方に良い商品です。</p>
-                                <img src="./../../assets/img/articles/beauty/12.08.2020/3.png" alt="BIELENDA"
-                                    class="myImg image-left__center">
-                                <b>BIELENDA(ビエレンダ)</b>
-                                <p>ポーランドの美容ブランドの中で最も有名なブランドの一つです。Bielendaのプロ向けの商品は主に美容皮膚科で販売されています。このメーカーは、乾燥肌、成熟肌、オイリー肌、コンビネーション肌などのすべての肌タイプに対応する様々な製品を提供しています。</p>
-                                店舗では、化粧水、洗顔ジェル、クリーム、パックなどを購入することができます。Bielendaの商品を選べば、
-                                女性だけでなく男性も、朝と夜のスキンケアがパーフェクトに行えますよ👏 <br>
+                            <img src="./../../assets/img/articles/beauty/12.08.2020/3.png" alt="BIELENDA"
+                                class="myImg image-left__center">
+                            <b>BIELENDA(ビエレンダ)</b>
+                            <p>ポーランドの美容ブランドの中で最も有名なブランドの一つです。Bielendaのプロ向けの商品は主に美容皮膚科で販売されています。このメーカーは、乾燥肌、成熟肌、オイリー肌、コンビネーション肌などのすべての肌タイプに対応する様々な製品を提供しています。
+                            </p>
+                            店舗では、化粧水、洗顔ジェル、クリーム、パックなどを購入することができます。Bielendaの商品を選べば、
+                            女性だけでなく男性も、朝と夜のスキンケアがパーフェクトに行えますよ👏 <br>
                             </p>
                             <p>
                                 <b>BIO(コスメ)</b>
-                                <p>Soraya PlanteとGarnier BIOはBIOコスメブランドの中でも有名です。もし健やかな肌を保ちたいだけでなく、
+                            <p>Soraya PlanteとGarnier BIOはBIOコスメブランドの中でも有名です。もし健やかな肌を保ちたいだけでなく、
                                 環境保護や天然成分にこだわった商品を購入したい方は、この2つのブランドははずせません♪</p>
                             <img src="./../../assets/img/articles/beauty/12.08.2020/4.png" alt="BIO Cosmetics"
                                 class="myImg image-center__center">
