--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -912,7 +912,7 @@
               <a href="about.html" target="_blank">@Martyna</a>
             </div>
           </div>
-          <button class="acc lesson lesson--to-be">To be verb</button>
+          <button class="acc lesson lesson--to-be">是变法</button>
           <div class="panel">
             <h2>To be verb</h2>
             <p>开始学习新语言的时候，《是》一般为第一个学会的动词。那，我们看看波兰语“是”的情况怎么样吧。<br><br>
