--- a/ch/index.html
+++ b/ch/index.html
@@ -9,8 +9,7 @@
         gtag('js', new Date()); gtag('config', 'UA-175962314-1')
     </script>
     <meta charset="UTF-8">
-    <meta name="description"
-        content="大家好，我们是SARO。这个网站主要是为想要学习波兰语的朋友而建设。 网站的主要语言是英语，但我们也加入了日语和韩语。
+    <meta name="description" content="大家好，我们是SARO。这个网站主要是为想要学习波兰语的朋友而建设。 网站的主要语言是英语，但我们也加入了日语和韩语。
         SARO的名字来源于日本名“Saki”（沙季）和Robert. Saki（日本人）和Robert（波兰人）是一对未婚夫妇，他们在这个网站努力
         分享他们的知识。">
     <meta name="keywords"
@@ -76,26 +75,24 @@
                 <h1>新闻</h1>
                 <article>
                     <div class="content content--news">
-                      <div class="box-news__item">
+                        <div class="box-news__item">
                             <div class="box-news">
                                 <h2>New lessons!</h2>
-                                <p class="data"> 21.11.2020 | author: <a href="about.html" target="_blank"
+                                <p class="data">2020年11月21日|编辑：<a href="about.html" target="_blank"
                                         class="author">@Robert</a></p>
-                                <img src="./assets/img/embl/to-be.jpg" alt="to be lesson" class="image-left__center" />
+                                <img src="../assets/img/embl/to-be.jpg" alt="to be lesson" class="image-left__center" />
                                 <p>
-                                    Hello again! As we promised we update our sections regularly at least once per
-                                    week. <br>
-                                    <b>New features: </b> <br>
-                                    - <a href="./stuff/api/polishNames/index.html">Polish name checker APP</a> is based
-                                    on our data now, if you don't see some names just send report to us
-                                    and we will update it as soon as possible. <br>
-                                    <b>Lessons</b> <br>
-                                    - to be <br>
-                                    - 10 Polish idioms <br>
-                                    - test unit 0 <br>
-                                    check it here <a href="./lessons.html">Lessons page</a> <br>
-                                    Articles: <br>
-                                    - <a href="./stuff/traditions.html">independence day (traditions)</a>
+                                    你好，我们又见面了。正如我们所说的我们至少一周会更新一次网站项目。<br>
+                                    <b>新项目：</b> <br>
+                                    - <a href="./stuff/api/polishNames/index.html">波兰语查看小程序</a>主要基于我们的数据，
+                                    如果有些名字你找不到，欢迎反馈给我们，我们会尽快更新。<br>
+                                    <b>课程</b> <br>
+                                    - to be动词用法 <br>
+                                    - 10个波兰俗语<br>
+                                    - 第一单元小测验<br>
+                                    点击这里<a href="./lessons.html">课程页面</a> <br>
+                                    文章：<br>
+                                    - <a href="./stuff/traditions.html">国家独立日（传统）</a>
                                 </p>
                             </div>
                         </div>
@@ -113,7 +110,7 @@
                                     我们最近很忙
                                     <u>因为新冠病毒</u> 😥
                                     <br>
-                                   网站新增内容: <br>
+                                    网站新增内容: <br>
                                     *<a href="./lessons.html">课程</a> 形容词和名字的格变化（因性别而不同）课程
                                     <br>
                                     *<a href="./stuff/dialogue.html">日常对话</a> 日用品店!<br>
@@ -159,15 +156,12 @@
                                         class="author">@Robert</a></p><br>
                                 <img src="../assets/img/embl/beauty.jpg" alt="Dialogue page"
                                     class="image-left__center" />
-                                <p>大家好！我们最近更新了很多不同部分的内容！ <a href="stuff/dialogue.html"
-                                        target="_blank">日常对话</a> 和 <a href="stuff/beauty.html"
-                                        target="_blank">美妆</a>
+                                <p>大家好！我们最近更新了很多不同部分的内容！ <a href="stuff/dialogue.html" target="_blank">日常对话</a> 和 <a
+                                        href="stuff/beauty.html" target="_blank">美妆</a>
                                     现在可以在 <a href="stuff/">其他内容的页面</a> 查看.
                                     同时，我们正在寻找可以帮助我们的朋友🙂。如果你会中文、日语、韩语、越南语外的任何语种，且英语水平
-                                    在B2及B2以上，我们很欢迎你加入我们。如果你有兴趣帮助我们请访问我们的网站 <a href="join/"
-                                        target="_blank">Join us❤</a>
-                                    你也可以在 <a
-                                        href="https://www.facebook.com/SARO-Free-Polish-Lessons-106067287815397"
+                                    在B2及B2以上，我们很欢迎你加入我们。如果你有兴趣帮助我们请访问我们的网站 <a href="join/" target="_blank">Join us❤</a>
+                                    你也可以在 <a href="https://www.facebook.com/SARO-Free-Polish-Lessons-106067287815397"
                                         target="_blank"> Facebook</a> and <a href="https://instagram.com/sarowebsite/"
                                         target="_blank"> instagram</a> 上关注我们，了解及时的更新内容。 </p>
                             </div>
