--- a/ch/test/unit0/index.html
+++ b/ch/test/unit0/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <section class="quiz">
-        <button class="back" onclick="goBack()"></button>
+        <button class="back" onclick="goBack()">返回</button>
         <script>
             function goBack() {
                 window.history.back();
@@ -21,7 +21,7 @@
             <div class="box__quiz box__quiz--item">
                 <div id="box__quiz">
                     <div class="start start--item">
-                        <div id="start">START</div>
+                        <div id="start">开始</div>
                     </div>
                     <div id="quiz" style="display: none">
                         <div id="question"></div>
