--- a/ch/index.html
+++ b/ch/index.html
@@ -77,7 +77,7 @@
                     <div class="content content--news">
                         <div class="box-news__item">
                             <div class="box-news">
-                                <h2>New lessons!</h2>
+                                <h2>新的课程</h2>
                                 <p class="data">2020年11月21日|编辑：<a href="about.html" target="_blank"
                                         class="author">@Robert</a></p>
                                 <img src="../assets/img/embl/to-be.jpg" alt="to be lesson" class="image-left__center" />
