--- a/ch/stuff/tools.html
+++ b/ch/stuff/tools.html
@@ -3,8 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description"
-        content="大家好，我们是SARO。这个网站主要是为想要学习波兰语的朋友而建设。 网站的主要语言是英语，但我们也加入了日语和韩语。
+    <meta name="description" content="大家好，我们是SARO。这个网站主要是为想要学习波兰语的朋友而建设。 网站的主要语言是英语，但我们也加入了日语和韩语。
         SARO的名字来源于日本名“Saki”（沙季）和Robert. Saki（日本人）和Robert（波兰人）是一对未婚夫妇，他们在这个网站努力
         分享他们的知识。">
     <meta name="keywords"
@@ -63,30 +62,23 @@
             <div class="wrapper">
                 <h1>搜索工具</h1>
                 <article>
-                    <h2>Apps</h2>
-                    <div class="container__tools container__tools--item">
-                        <div class="container__tools">
-                            <!-- <div class="dictionary pronunciation">
-                        <label for="text" class="check">Check Polish pronunciation</label> <br>
-                        <input type="text" name="Text" placeholder="Enter your text here..." id="text"><br>
-                        <a href="#" class="say">Check</a>
-                        <audio class="audio" src="" hidden></audio>
-                    </div>
-            </div>
-            <br>
-            I'm gonna fix it soon :)-->
-                            <div class="tools-name__checker">
-                                <label for="name" class="check">查询波兰名字！</label>
-                                <input type="text" id="name" placeholder='例如：“Paulina”'>
-                                <div class="result" id="result">结果会显示在这里</div>
-                                <a href="#" onclick="getNameChinese()" class="button__default">查询</a>
+                    <h2>小程序</h2>
+                    <div class="container quiz">
+                        <div class="quiz__box quiz__box--item">
+                            <div class="quiz__box">
+                                <h2>波兰名字查询</h2>
+                                <img src="https://michalskirobert.github.io/img/portfolio__api-02.jpg"
+                                    alt="Polish name checker" class="image-left__center--medium">
+                                <b>简介:</b>
+                                <p> 你可以在这里查看波兰名字：）我希望你会喜欢这个小程序，如果你找不到你想要的名字请你反馈给我们，我们会及时更新。
+                                </p>
+                                <a href="./api/polishNames/" class="button__default">查看</a>
                             </div>
                         </div>
                     </div>
-                </article>
-                <div class="reportButton">
-                    <button class="report" onclick="report()">レポート</button>
-                </div>
+                    <div class="reportButton">
+                        <button class="report" onclick="report()">问题反馈</button>
+                    </div>
             </div>
         </section>
         <script src="./../../assets/js/tools.js"></script>
