--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -1020,9 +1020,9 @@
               <a href="about.html" target="_blank">@Martyna</a>
             </div>
           </div>
-          <button class="acc lesson lesson--polish-idioms">十个波兰语熟语</button>
+          <button class="acc lesson lesson--polish-idioms">十个波兰语俗语</button>
           <div class="panel">
-            <h2>十个波兰语熟语</h2>
+            <h2>十个波兰语俗语</h2>
             <p>今天我们来上比较有意思的课 ——我们会学习关于一批波兰语的俗语。</p>
             <p style="margin-bottom: 15px">俗语一般是几个单词组成在一起，它们共同具有某种含义。不过将每一个词单独分析的话，或
               者看俗语字面意思的话，要么没有太多的意义，要么字面意思和比喻意思完全不同。
@@ -1032,14 +1032,14 @@
               上对这件事很熟悉 <br>
               <span class="example">列子:</span> <br>
               <span lang="pl">Nie udawaj Greka, wiem że wziąłeś moje pieniądze.</span> <br>
-              别假装，我知道你将我的钱拿走了。 <br> <br>
+              别假装，我知道你将我的钱拿走了 <br> <br>
               ● <span lang="pl">Złota rączka</span> (字面意思：金色手) – 来描写人，指很善于维修东西的人（通常是家里的
               东西，家具，设备等）<br>
               <span class="example">例子:</span> <br>
               <span lang="pl">Mój tata to prawdziwa złota rączka, sąsiedzi proszą go o pomoc w naprawie ich
                 pralek.</span>
               <br>
-              我爸爸真是个金色手，邻居们都找他的帮助维修他们的洗衣机。 <br> <br>
+              我爸爸真是个金色手，邻居们总是找他帮忙修洗衣机。 <br> <br>
               ● <span lang="pl">Bułka z masłem </span>(字面意思：上面有奶油的面包) – 来描写很简单的事<br>
               <span class="example">例子:</span> <br>
               <span lang="pl">Nauka języka polskiego to dla mnie bułka z masłem.</span> <br>
