--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -1020,9 +1020,9 @@
               <a href="about.html" target="_blank">@Martyna</a>
             </div>
           </div>
-          <button class="acc lesson lesson--polish-idioms">十个波兰语俗语</button>
+          <button class="acc lesson lesson--polish-idioms">十个波兰俗语</button>
           <div class="panel">
-            <h2>十个波兰语俗语</h2>
+            <h2>十个波兰俗语</h2>
             <p>今天我们来上比较有意思的课 ——我们会学习关于一批波兰语的俗语。</p>
             <p style="margin-bottom: 15px">俗语一般是几个单词组成在一起，它们共同具有某种含义。不过将每一个词单独分析的话，或
               者看俗语字面意思的话，要么没有太多的意义，要么字面意思和比喻意思完全不同。
@@ -1032,7 +1032,7 @@
               上对这件事很熟悉 <br>
               <span class="example">列子:</span> <br>
               <span lang="pl">Nie udawaj Greka, wiem że wziąłeś moje pieniądze.</span> <br>
-              别假装，我知道你将我的钱拿走了 <br> <br>
+              别装了，我知道你将我的钱拿走了。<br> <br>
               ● <span lang="pl">Złota rączka</span> (字面意思：金色手) – 来描写人，指很善于维修东西的人（通常是家里的
               东西，家具，设备等）<br>
               <span class="example">例子:</span> <br>
@@ -1068,7 +1068,7 @@
               明，但是他/她刚才说的事让“我”觉得他/她太白痴）<br>
               <span class="example">例子</span> <br>
               <span lang="pl">Jeśli myślisz, że Ci pomogę to upadłeś na głowę.</span> <br>
-              如果你觉得我会帮忙你，那你就很白痴了。 <br><br>
+              如果你觉得我会帮你忙，那你就太傻了。 <br><br>
               ● <span lang="pl">Być nie w sosie</span> (字面意思：不在酱中) – 心情不好，脾气不好的意思
               <br>
               <span class="example">例子:</span> <br>
