--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -966,7 +966,8 @@
                 <span class="accent">One są</span> studentkami – 她们是大学生（《她们》都是女的）<br>
                 <span class="accent">To jest</span> uniwersytet – 这是大学 <br></span>
             </p>
-            <p>你可能发现了，上写局子里的意思根据名词或代词不同而变，意思变化不依靠动词。尽管如此，现在不要太担心名词变法——上这门课的时候只注意<span lang="pl">być</span>的变化规则就行。😊
+            <p>你可能发现了，上面句子的意思因为名词或代词不同而变，不因为动词的变化而改变。尽管如此，现在不要太担心名词变法——上这门课的时候只注意być的变化规则就行。<span
+                lang="pl">być</span>的变化规则就行。😊
               <br><br>
               你想不想要练习一下，自己造句吗？
             </p>
@@ -1014,7 +1015,7 @@
             <div id="afterSubmit"></div>
             <p id="messages"></p>
             <p id="numberCorrect"></p>
-            <script src="./../assets/js/quizToBeZh.js"></script>
+            <script type="module" src="./../assets/js/quizToBe..js"></script>
             <div class="sign">
               <p class="sign--person">编辑</p>
               <a href="about.html" target="_blank">@Martyna</a>
