--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -1916,7 +1916,7 @@
             <div id="afterSubmit"></div>
             <p id="messages"></p>
             <p id="numberCorrect"></p>
-            <script src="./../assets/js/quizToBeJP.js"></script>
+            <script type="module" src="./../assets/js/quizToBe.js"></script>
             <div class="sign">
               <p class="sign--person">作成者:</p>
               <a href="about.html" target="_blank">@マルティナ</a>
