--- a/lessons.html
+++ b/lessons.html
@@ -1102,12 +1102,12 @@
               <input class="textbox" type="text" name="question9"> moimi przyjaciółkami.
               <p>I am your neighbour.</p>
               <input class="textbox" type="text" name="question10"> twoim sąsiadem.
-              <input id="submitButton" type="button" value="Check my answers" onclick="check()">
+              <input id="submitButton" type="button" value="Check my answers">
             </form>
             <div id="afterSubmit"></div>
             <p id="messages"></p>
             <p id="numberCorrect"></p>
-            <script src="./assets/js/quizToBe.js"></script>
+            <script type="module" src="./assets/js/quizToBe.js"></script>
             <div class="sign">
               <p class="sign--person">written by</p>
               <a href="about.html" target="_blank">@Martyna</a>
