--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -1911,7 +1911,7 @@
                 <rt>トゥフォイム ソンシァデム</rt>
                 <rp>)</rp>
               </ruby>. <br>
-              <input id="submitButton" type="button" value="Check my answers" onclick="check()">
+              <input id="submitButton" type="button" value="Check my answers">
             </form>
             <div id="afterSubmit"></div>
             <p id="messages"></p>
