--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -1010,12 +1010,12 @@
               <input class="textbox" type="text" name="question9"><span lang="pl"> moimi przyjaciółkami. </span>
               <p>我是你的邻居。</p>
               <input class="textbox" type="text" name="question10"><span lang="pl"> twoim sąsiadem. </span>
-              <input id="submitButton" type="button" value="查看答案" onclick="check()">
+              <input id="submitButton" type="button" value="查看答案">
             </form>
             <div id="afterSubmit"></div>
             <p id="messages"></p>
             <p id="numberCorrect"></p>
-            <script type="module" src="./../assets/js/quizToBe..js"></script>
+            <script type="module" src="./../assets/js/quizToBe.js"></script>
             <div class="sign">
               <p class="sign--person">编辑</p>
               <a href="about.html" target="_blank">@Martyna</a>
