--- a/lessons.html
+++ b/lessons.html
@@ -1244,6 +1244,182 @@
             <p>And these are the basics really. Congratulations on learning your first case! </p>
           </div>
         </div>
+        <div class="container">
+          <button class="acc lesson lesson--nominative">Numerals</button>
+          <div class="panel">
+            <h2>Numerals</h2>
+            <p>In this lesson you will see how we usually count in Polish.<br>
+              First off, please take a look at first twenty numerals:
+            </p>
+            <ul>
+              <li>0 – zero </li>
+              <li>1 – jeden</li>
+              <li>2 – dwa</li>
+              <li>3 – trzy </li>
+              <li>4 – cztery </li>
+              <li>5 – <span lang="pl">pięć</span></li>
+              <li>6 – <span lang="pl">sześć</span></li>
+              <li>7 – siedem</li>
+              <li>8 – osiem</li>
+              <li>9 – <span lang="pl">dziewięć</span></li>
+              <li>10 – <span lang="pl">dziesięć</span></li>
+              <li>11 – <span lang="pl">jedenaście</span></li>
+              <li>12 – <span lang="pl">dwanaście</span></li>
+              <li>13 –<span lang="pl"> trzynaście</span></li>
+              <li>14 – <span lang="pl">czternaście</li>
+              <li>15 – <span lang="pl">piętnaście</span> </li>
+              <li>16 – <span lang="pl">szesnaście</span></li>
+              <li>17 – <span lang="pl">siedemnaście</span></li>
+              <li>18 – <span lang="pl">osiemnaście</span></li>
+              <li>19 – <span lang="pl">dziewiętnaście</span></li>
+              <li>20 – <span lang="pl">dwadzieścia</span></li>
+            </ul>
+            <p>Up from this point, rules of forming numerals are quite clear and regular. If you want to say 25, you
+              simply take „twenty” and „five” – which gives you <span lang="pl">dwadzieścia pięć</span>.
+            </p>
+            <ul>
+              <li>21 – <span lang="pl">dwadzieścia jeden</span></li>
+              <li>22 – <span lang="pl">dwadzieścia dwa</span></li>
+              <li>23 – <span lang="pl">dwadzieścia trzy</span> </li>
+              <li>24 – <span lang="pl">dwadzieścia cztery</span></li>
+              <li>25 – <span lang="pl">dwadzieścia pięć</span></li>
+              <li>26 – <span lang="pl">dwadzieścia sześć</span></li>
+              <li>27 – <span lang="pl">dwadzieścia siedem</span></li>
+              <li>28 – <span lang="pl">dwadzieścia osiem</span></li>
+              <li>29 – <span lang="pl">dwadzieścia dziewięć</span></li>
+            </ul>
+            <ul>
+              <li>30 – <span lang="pl">trzydzieści</span></li>
+              <li>40 – <span lang="pl">czterdzieści</span></li>
+              <li>50 – <span lang="pl">pięćdziesiąt</span></li>
+              <li>60 – <span lang="pl">sześćdziesiąt</span></li>
+              <li>70 – <span lang="pl">siedemdziesiąt</span></li>
+              <li>80 – <span lang="pl">osiemdziesiąt</span> </li>
+              <li>90 – <span lang="pl">dziewięćdziesiąt</span></li>
+              <li>100 – sto </li>
+            </ul>
+            <p>Numbers above one hundred are formed the same way, by „glueing”: hundreds + tens + ones:</p>
+            <ul><span lang="pl">
+                <li><span class="redLetter">1</span><span class="blue">2</span><span class="green">1</span> – <span
+                    class="redLetter">sto</span> <span lang="pl"><span class="blue">dwadzieścia</span> <span
+                      class="green">jeden</span></li>
+                <li><span class="redLetter">1</span><span class="blue">3</span><span class="green">6</span> – <span
+                    class="redLetter">sto</span> <span lang="pl"><span class="blue">trzydzieści</span> <span
+                      class="green">sześć</span></li>
+                <li><span class="redLetter">1</span><span class="blue">5</span><span class="green">5</span> – <span
+                    class="redLetter">sto</span> <span lang="pl"><span class="blue">pięćdziesiąt</span> <span
+                      class="green">pięć</span></li>
+                <li><span class="redLetter">1</span><span class="blue">80</span> – <span class="redLetter">sto</span>
+                  <span lang="pl"><span class="blue">osiemdziesiąt</span></li>
+                <li><span class="redLetter">1</span>0<span class="green">4</span> – <span class="redLetter">sto</span>
+                  <span class="green">cztery</span></li>
+                <li><span class="redLetter">1</span><span class="green">17</span> – <span class="redLetter">sto</span>
+                  <span lang="pl"><span class="green">siedemnaście</span></li>
+              </span>
+            </ul>
+            <p>Numerals for hundreds are as follows: </p>
+            <ul>
+              <li>100 – sto</li>
+              <li>200 – <span lang="pl">dwieście</span></li>
+              <li>300 – trzysta</li>
+              <li>400 – czterysta</li>
+              <li>500 – <span lang="pl">pięćset</span></li>
+              <li>600 – <span lang="pl">sześćset</span></li>
+              <li>700 – siedemset</li>
+              <li>800 – osiemset</li>
+              <li>900 – <span lang="pl">dziewięćset</span></li>
+              </span>
+            </ul>
+            <p>And for thousands: </p>
+            <ul>
+              <li>1000 – <span lang="pl">tysiąc</span></li>
+              <li>2000 – dwa <span lang="pl">tysiące</span></li>
+              <li>3000 – trzy <span lang="pl">tysiące</span></li>
+              <li>4000 – cztery <span lang="pl">tysiące</span></li>
+              <li>5000 – <span lang="pl">pięć tysięcy</span></li>
+              <li>6000 – <span lang="pl">sześć tysięcy</span></li>
+              <li>7000 – <span lang="pl">siedem tysięcy</span></li>
+              <li>8000 – <span lang="pl">osiem tysięcy</span></li>
+              <li>9000 – <span lang="pl">dziewięć tysięcy</span></li>
+            </ul>
+            <p>
+              Let’s stop at <span lang="pl">dziesięć tysięcy</span> for now and check if this topic is clear for you.
+              Please say aloud and write the numbers: </p>
+            <ul>
+              <li>1 – ........................................................................</li>
+              <li>6 – ........................................................................</li>
+              <li>10 – ........................................................................</li>
+              <li>78 – ........................................................................</li>
+              <li>15 – ........................................................................</li>
+              <li>34 – ........................................................................</li>
+              <li>59 – ........................................................................</li>
+              <li>90 – ........................................................................</li>
+              <li>22 – ........................................................................</li>
+              <li>12 – ........................................................................</li>
+              <li>100 – ........................................................................</li>
+              <li>132 – ........................................................................</li>
+              <li>113 – ........................................................................</li>
+              <li>107 – ........................................................................</li>
+              <li>119 – ........................................................................</li>
+              <li>167 – ........................................................................</li>
+              <li>199 – ........................................................................</li>
+              <li>200 – .......................................................................</li>
+              <li>231 – .......................................................................</li>
+              <li>309 – .......................................................................</li>
+              <li>370 – .......................................................................</li>
+              <li>526 – .......................................................................</li>
+              <li>433 – .......................................................................</li>
+              <li>612 – .......................................................................</li>
+              <li>777 – .......................................................................</li>
+              <li>851 – .......................................................................</li>
+              <li>903 – .......................................................................</li>
+              <li>1020 – .......................................................................</li>
+              <li>1111 – .......................................................................</li>
+              <li>2020 – .......................................................................</li>
+            </ul>
+
+
+            <p>
+              Once you finish, you can check the answers at the end of this lesson. <br><br>
+
+              If you need any help wih pronounciation, there are lots of fantastic videos on Youtube. Just type in
+              „counting in Polish” into the search box. <br> <br>
+              <b>Answers:</b>
+            </p>
+            <ul>
+              <li>1 – jeden</li>
+              <li>6 – <span lang="pl">sześć</span></li>
+              <li>10 – <span lang="pl">dziesięć</span></li>
+              <li>78 – <span lang="pl">siedemdziesiąt osiem</span></li>
+              <li>15 – <span lang="pl">piętnaście</span></li>
+              <li>34 – <span lang="pl">trzydzieści cztery</span></li>
+              <li>59 – <span lang="pl">pięćdziesiąt dziewięć</span></li>
+              <li>90 – <span lang="pl">dziewięćdziesiąt</span></li>
+              <li>22 – <span lang="pl">dwadzieścia dwa</span></li>
+              <li>12 – <span lang="pl">dwanaście</span></li>
+              <li>100 – sto</li>
+              <li>132 – sto <span lang="pl">trzydzieści dwa</span></li>
+              <li>113 – sto <span lang="pl">trzynaście</span></li>
+              <li>107 – sto siedem</li>
+              <li>119 – sto <span lang="pl">dziewiętnaście</span></li>
+              <li>167 – sto <span lang="pl">sześćdziesiąt siedem</span></li>
+              <li>199 – sto <span lang="pl">dziewięćdziesiąt dziewięć</span></li>
+              <li>200 – <span lang="pl">dwieście</span></li>
+              <li>231 – <span lang="pl">dwieście trzydzieści jeden</span></li>
+              <li>309 – trzysta <span lang="pl">dziewięć</span></li>
+              <li>370 – trzysta <span lang="pl">siedemdziesiąt</span></li>
+              <li>526 – <span lang="pl">pięćset dwadzieścia</span></li>
+              <li>433 – czterysta <span lang="pl">trzydzieści trzy</span></li>
+              <li>612 – <span lang="pl">sześćset dwanaście</span></li>
+              <li>777 – siedemset <span lang="pl">siedemdziesiąt siedem</span></li>
+              <li>851 – osiemset <span lang="pl">pięćdziesiąt jeden</span></li>
+              <li>903 – <span lang="pl">dziewięćset trzy</span></li>
+              <li>1020 – <span lang="pl">tysiąc dwadzieścia</span></li>
+              <li>1111 – <span lang="pl">tysiąc sto jedenaście</span></li>
+              <li>2020 – dwa <span lang="pl">tysiące dwadzieścia</span></li>
+            </ul>
+          </div>
+        </div>
         <!-- <button class="accordion-4">acc lesson 3</button>
         <div class="panel">
           <h2>acc lesson 3</h2><br>
